// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer component should match a snapshot when closed 1`] = `
<Fragment>
  <div
    className="drawer-bg"
    onClick={[Function]}
  />
  <div
    className="drawer"
  >
    Hello. I am content.
  </div>
</Fragment>
`;

exports[`Drawer component should match a snapshot when open 1`] = `
<Fragment>
  <div
    className="drawer-bg drawer-bg-open"
    onClick={[Function]}
  />
  <div
    className="drawer drawer-open"
  >
    Hello. I am content.
  </div>
</Fragment>
`;
